[package]
name = "wishlist-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.1"
derive_more = "0.99.17"
fantoccini = {version = "0.18.0", features = ["native-tls"]}
regex = "1.5.4"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
tokio = { features = ["full"], version = "1.16.1" }
url = "2.2.2"
